Fix list padding

--- a/popup.html
+++ b/popup.html
@@ -12,8 +12,8 @@
         <div style="color: white;  text-align:center;">Connectome</div>
     </div>
     
-    <div id="contacts" style="padding: 10px;">
-      <label>Invite Friends to event:</label>
+    <div id="contacts">
+      <label>Invite to event:</label>
       <ul>
         <li><input type="checkbox" name="alice_smith" value="alice_smith">Alice Smith</li>
         <li><input type="checkbox" name="bob_johnson" value="bob_johnson">Bob Johnson</li>
